# raylib-template-c

./: CMakeLists.txt  CONVENTIONS.md  LICENSE  README.md
cmake/: linux.cmake  macos.cmake  windows.cmake
src/: CMakeLists.txt  main.c
toolchains/: linux.cmake  windows.cmake
